--- a/TrileroVue/package.json
+++ b/TrileroVue/package.json
@@ -15,6 +15,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/lodash-es": "^4.17.10",
+    "lodash-es": "^4.17.21",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
